iptables.rules
# Generated by iptables-save v1.6.1 on Thu Oct 12 19:01:05 2017
*security
:INPUT ACCEPT [69411261:13632979175]
:FORWARD ACCEPT [40771:36993560]
:OUTPUT ACCEPT [54367836:49476127263]
COMMIT
# Completed on Thu Oct 12 19:01:05 2017
# Generated by iptables-save v1.6.1 on Thu Oct 12 19:01:05 2017
*raw
:PREROUTING ACCEPT [69453983:13670181126]
:OUTPUT ACCEPT [54367836:49476127263]
COMMIT
# Completed on Thu Oct 12 19:01:05 2017
# Generated by iptables-save v1.6.1 on Thu Oct 12 19:01:05 2017
*nat
:PREROUTING ACCEPT [7857:540115]
:INPUT ACCEPT [7833:537070]
:OUTPUT ACCEPT [4763:287357]
:POSTROUTING ACCEPT [4763:287357]
:nat_link_xh - [0:0]
-F POSTROUTING
-A POSTROUTING -s 10.71.75.0/24 -j nat_link_xh
-A POSTROUTING -s 10.13.37.0/24 -j nat_link_xh
-A POSTROUTING -s 10.73.31.0/24 -j nat_link_xh
-A nat_link_xh -d 74.207.244.165 -j RETURN
-A nat_link_xh -d 10.71.75.0/24 -j RETURN
-A nat_link_xh -d 10.73.31.0/24 -j RETURN
-A nat_link_xh -d 10.13.37.0/24 -j RETURN
-A nat_link_xh -j MASQUERADE
#-A POSTROUTING -s 10.234.20/24 ! -d 10.0.0.0/8 -o ens4 -j MASQUERADE
COMMIT
# Completed on Thu Oct 12 19:01:05 2017
# Generated by iptables-save v1.6.1 on Thu Oct 12 19:01:05 2017
*mangle
:PREROUTING ACCEPT [69446061:13669348944]
:INPUT ACCEPT [69404442:13632218732]
:FORWARD ACCEPT [40771:36993560]
:OUTPUT ACCEPT [54362295:49475602595]
:POSTROUTING ACCEPT [54403159:49512601435]
-A FORWARD -o enp0s3 -p tcp -m tcp --tcp-flags SYN,RST SYN -m tcpmss --mss 1361:1536 -j TCPMSS --set-mss 1360
COMMIT
# Completed on Thu Oct 12 19:01:05 2017
# Generated by iptables-save v1.6.1 on Thu Oct 12 19:01:05 2017
*filter
:INPUT ACCEPT [69404264:13632207162]
:FORWARD ACCEPT [40771:36993560]
:OUTPUT ACCEPT [54362155:49475175983]
COMMIT
# Completed on Thu Oct 12 19:01:05 2017
